--- a/mysite/shelter/templates/shelter/profile.html
+++ b/mysite/shelter/templates/shelter/profile.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Профіль користувача</title>
-    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/profile1.css' %}">
 </head>
 
 <body>
